<resources>
    <string name="app_name">UMemorizing!</string>
    <string name="button_start">Start</string>
    <string name="button_settings">Settings</string>
    <string name="main_info_line1_left" />
    <string name="main_info_line1_right">book file(s) detected in your book file folder</string>
    <string name="main_info_line2_left">You are now using:</string>
    <string name="present_book_undefined">Choose one!</string>
    <string name="dialog_title_no_present_book">Failed to get present book</string>
    <string name="dialog_message_no_present_book">Book not chosen or present book invalid.Choose a new book!</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_add">Add</string>
    <string name="dialog_title_quick_add">Quick add a line to present book</string>
    <string name="toast_added">Added!</string>
    <string name="dialog_title_permission">why need the permission?</string>
    <string name="dialog_message_permission">This app need the permission of \"storage\" to save your book files in your phone.</string>
    <string name="dialog_button_got_it">Got it</string>
    <string name="toast_need_permission">Can\'t get the storage permission</string>
    <string name="hint">Hint:</string>
    <string name="answer">Answer:</string>
    <string name="menu_quick_add">Quick add</string>
    <string name="menu_options">Options</string>
    <string name="menu_manual">Manual</string>
    <string name="menu_about">About</string>
    <string name="text_present_book">Present book:</string>
    <string name="text_available_book">Available books:</string>
    <string name="dialog_title_create_book">Create a new book</string>
    <string name="dialog_button_create">Create</string>
    <string name="toast_created">Created!</string>
    <string name="toast_book_not_chosen">Choose a book first!</string>
    <string name="toast_illegal_character">Illegal character!</string>
    <string name="toast_already_exists">This name has been token!</string>
    <string name="toast_create_failed">Failed to create</string>
    <string name="toast_book_need_name">Please enter the name of book!</string>
    <string name="dialog_title_delete">Delete Confirmation</string>
    <string name="dialog_message_delete_file">Sure to delete?\nNotice that his will delete this file from your phone completely!</string>
    <string name="dialog_button_delete">Sure, delete</string>
    <string name="toast_delete_fail">Fail to delete</string>
    <string name="toast_no_app_found_to_open">Can\'t find an app in your phone to open this file!</string>
    <string name="dialog_title_config">Config book</string>
    <string name="toast_rename_fail">Fail to rename</string>
    <string name="button_use">Use</string>
    <string name="button_config">Config</string>
    <string name="button_edit">Edit</string>
    <string name="button_create_book">Create a new book</string>
    <string name="button_delete_book">Delete book</string>
    <string name="button_show_answer">Show Answer</string>
    <string name="button_remember">I can recite this</string>
    <string name="button_remember_not">I didn\'t recollect</string>
    <string name="hint_enter_book_name">Enter book name here</string>
    <string name="text_xls_extension">.xls</string>
    <string name="text_memorizing_times">Times to memorize:</string>
    <string name="title_settings">Settings</string>
    <string name="text_config">You can rename, change times of memorizing, and/or reset your memorizing progress here\n\nNotice that if you change your times of memorizing, your progress will always be reset</string>
    <string name="checkbox_reset_progress">Reset progress</string>
    <string name="dialog_title_this_finish">This book finished</string>
    <string name="dialog_message_finished">Memorize this book one more time?</string>
    <string name="dialog_button_one_more_time">OK, one more time</string>
    <string name="dialog_button_back_to_start">Back to start</string>
    <string name="title_answer">Memorizing…</string>
    <string name="text_progress">Progress:</string>
    <string name="text_draft_area">Draft area</string>
    <string name="text_no_data">No Data</string>
    <string name="toast_hint_needed">Hint can\'t be empty!</string>
    <string name="sheet_sheet_name">book</string>
    <string name="sheet_no_data">No Data</string>
    <string name="sheet_hint">hint</string>
    <string name="sheet_answer">answer</string>
    <string name="sheet_times">Times left</string>
    <string name="toast_storage_unavailable">Phone storage unavailable!</string>
    <string name="toast_config_complete">Config complete!</string>
    <string name="title_edit">Edit</string>
    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_save">Save</string>
    <string name="toast_present_book_set_complete">Present book updated!</string>
    <string name="dialog_title_add">Add</string>
    <string name="dialog_message_delete_row">Sure to delete?\nNotice that his will delete this row from your book completely!</string>
    <string name="toast_need_choose_line">Please choose a line first!</string>
    <string name="toast_deleted">Deleted!</string>
    <string name="text_left_times">Left memorizing times of this item:</string>
    <string name="text_version">Version:</string>
    <string name="text_fetch_fail">Fetch failed</string>
    <string name="button_generate_example">Generate example file</string>
    <string name="name_example">example.xls</string>
    <string name="toast_example_exists">Example file already exists!</string>
    <string name="toast_example_generated">Example file generated!</string>
    <string name="sheet_hint_word">呵呵</string>
    <string name="sheet_ans_word">interesting</string>
    <string name="sheet_hint_sentence">Rice dumpling tastes sweet.</string>
    <string name="sheet_ans_sentence">粽子是甜的。</string>
    <string name="sheet_hint_question">In which year did The World War II break out?</string>
    <string name="sheet_hint_answer" translatable="false">1939</string>
    <string name="text_image">Image</string>
    <string name="manual_title">Universal Memorizing Assistant Manual\n</string>
    <string name="manual_brief_introduction">Brief introduction:</string>
    <string name="manual_text_1">
        \n\u3000\u3000 Universal Memorizing Assistant is an app that helps you to memorize things.\n\n\u3000\u3000
        It will create a folder named U_Memorizing in the root dictionary of your phone storage,
        and use .xls files as books for storing your memorizing content.\n\n\u3000\u3000
        You can create, delete and edit your book files through either your phone or your PC.\n\n\u3000\u3000
        An example file has been generated for you to understand how to use this app. You can always regenerate it by clicking this button:
    </string>
    <string name="manual_text_2">
        \u3000\u3000 If you are an experienced computer/phone user and familiar with this kind of apps,
        the content above will be enough for you to use this app.\n\n\u3000\u3000
        If not or you are interested in more details, you can continue reading the content below.
    </string>
    <string name="manual_feature">\nFeature:</string>
    <string name="manual_text_3">
        \n\u3000\u3000 Universal Memorizing Assistant is an app that you can use it in many conditions concerning memorizing,
        like learning a second language, memorizing answers to questions and so on. \n\n\u3000\u3000
        Here is some of its usage:\n\n
        \u3000\u3000 - Memorizing words that are not likely to find in a dictionary:\n
    </string>
    <string name="manual_text_4">
         \n\u3000\u3000 - Memorizing sentences that you want to use as motto:\n
    </string>
    <string name="manual_text_5">
         \n\u3000\u3000 - Memorizing answers to questions:\n
    </string>
    <string name="manual_text_7">
        \n\u3000\u3000 The biggest difference between this app and other word/sentence-memorizing app is that
        in this app you will custom your memorizing content completely.\n\n
        \u3000\u3000 This may be quite useful when you are about to memorizing a lot of items that created by yourself.
    </string>
    <string name="manual_files">\nAbout files:</string>
    <string name="manual_text_8">
        \n\u3000\u3000 This app use the .xls file as a storage to store your data to memorize (sorry that .xlsx is not supported yet),
        each file is called a \"book\" in this app, represent a book you will memorize.\n
        \n\u3000\u3000 You can edit your .xls file in your PC and use it in your phone, through this app,
        which I think is the most convenient way to make your own book and use it:\n
    </string>
    <string name="manual_text_9">
        \n\u3000\u3000 while you can also edit your book through this app:\n
    </string>
    <string name="manual_text_10">
        \n\u3000\u3000 A folder named U_Memorizing will be created in your phone storage in the root dictionary,
        and all the .xls files in this folder will be scanned as books to use.\n
    </string>
    <string name="manual_text_11">
        \n\u3000\u3000 So when you have created a book file in your PC and want to use it in this app, move it into this folder.
        And if you want to backup your books, back up this folder.\n
        \n\u3000\u3000 Note that a file named \"BookData.xml\" will also be created here, which stores all your book data,
        like progress and targeting memorizing times. DO NOT delete it if your are not about to reset all your book progress.\n
    </string>
    <string name="manual_book_format">\nBook editing format:</string>
    <string name="manual_text_12">
        \n\u3000\u3000 In a book file, only the first sheet is used. The first row is reserved as title, when editing your own book, you can leave it blank(it will be staffed automatically when using this book) or staff it if you like.
        \n\n\u3000\u3000 The first three columns of a book represents hint,answer,and left memorizing times.\n
        \n\u3000\u3000 When editing a book file, it is recommended make sure the hint and answer is not blank(though they are also being staffed if left blank).\n
        \n\u3000\u3000 As to left memorizing times, you can set it if you like, or it will be staffed with default value, 5, when using this book.\n
    </string>
    <string name="manual_memorizing_algorithm">About memorizing algorithm:</string>
    <string name="manual_text_13">
        \n\u3000\u3000 By default, each item of a book will be memorized 5 times, you can change this in the settings page.\n
        \n\u3000\u3000 when memorizing, if you choose \"I can recite this\", the left times of this item will decrease by 1 time,
        or it will increase by 1 time(but will not exceed the max target memorizing times you have set).\n
        \n\u3000\u3000 After every item in a book has been memorized for your targeting times,
        you will be noted that you have finished this book. You can choose another one or re-memorize this if you want.\n
        \n\u3000\u3000 Of course you can also change your present memorizing book, and all your process will be saved.\n
    </string>
    <string name="manual_contact_author">Contact Author:</string>
    <string name="manual_text_14">
        \n\u3000\u3000 As english is not my native language, I am pretty sure there must be some *bugs* in my expressions above,
        but I am fine with them and I will not *crash* for them, I hope you are still all right for now too. :p \n
        \n\u3000\u3000 Anyway, thanks for your reading. And sorry for your reading.\n
        \n\u3000\u3000 Report bugs or any other issues, contact:\n
        \n\u3000\u3000 fl_wjh@163.com
        \n\u3000\u3000 wfmytemp@gmail.com\n\n\n
    </string>
    <string name="manual_text_6">6</string>
</resources>
