<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add"
        android:icon="@mipmap/ic_add_box_white_48dp"
        android:orderInCategory="100"
        android:title="@string/menu_quick_add"
        app:showAsAction="ifRoom" />
    <item

        android:id="@+id/menu_options"
        android:icon="@mipmap/ic_more_vert_white_48dp"
        android:orderInCategory="200"
        android:title="@string/menu_options"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_manual"
                android:orderInCategory="200"
                android:title="@string/menu_manual"
                app:showAsAction="ifRoom" />

            <!--<item-->
            <!--android:id="@+id/menu_books"-->
            <!--android:orderInCategory="100"-->
            <!--android:title="books"-->
            <!--app:showAsAction="ifRoom" />-->
            <!--<item-->
            <!--android:id="@+id/menu_settings"-->
            <!--android:orderInCategory="200"-->
            <!--android:title="settings"-->
            <!--app:showAsAction="ifRoom" />-->
            <item
                android:id="@+id/menu_about"
                android:orderInCategory="300"
                android:title="@string/menu_about"
                app:showAsAction="ifRoom" />

        </menu>
    </item>
</menu>