<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fl.wf.universalmemorizingassistant.SettingsActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_edit"
        style="@style/ToolBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_edit">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tv_edit_present_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/text_present_editing_book"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_edit" />

    <Button
        android:id="@+id/bt_edit_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onAddClicked"
        android:text="@string/button_add"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_present_book" />

    <Button
        android:id="@+id/bt_edit_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onDeleteClicked"
        android:text="@string/button_delete"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_edit_add" />

    <!--<Button-->
        <!--android:id="@+id/bt_edit_save"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginRight="8dp"-->
        <!--android:onClick="onSaveClicked"-->
        <!--android:text="@string/button_save"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@id/bt_edit_delete" />-->


    <ListView
        android:id="@+id/lv_edit_rows"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:choiceMode="singleChoice"
        android:paddingBottom="8dp"
        android:paddingEnd="0dp"
        android:paddingLeft="8dp"
        android:paddingRight="0dp"
        android:paddingStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/bt_edit_add"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_present_book">

    </ListView>


</android.support.constraint.ConstraintLayout>
